--- a/styles/style.css
+++ b/styles/style.css
@@ -3,3 +3,93 @@
 .page {
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
+
+.header {
+    background-image: url("/images/cover-image-dark.png");
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 134px;
+    position: relative;
+    /*padding: 20px; !*меняется в 375*!*/
+}
+
+.header__no_focus {
+    font-family: IBM Plex Mono, sans-serif;
+    font-size: 157px;
+    font-weight: 700;
+    line-height: 130px;
+    letter-spacing: 0;
+    text-align: left;
+    color: rgba(219, 0, 255, 1);
+    text-shadow: 4px 4px  rgba(255, 0, 112, 1);
+    margin-top: 273px;
+}
+
+.header__title {
+    margin-top: 114px;
+    background-color: rgba(255, 0, 112, 1);
+    align-self: end;
+    width: 491px;
+    height: 71px;
+    font-family: IBM Plex Mono, sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 23px;
+    letter-spacing: 0;
+    text-align: left;
+}
+
+.header__theme-menu {
+    display: flex;
+    justify-content: center;
+    /*padding-top: 20px;*/
+}
+
+.header__theme-menu-list {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.header__theme-menu-button {
+    background-color: rgba(0,0,0,0);
+    border: 1px solid rgba(0,0,0,0);
+    font-family: IBM Plex Mono, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0;
+    text-align: center;
+    color: rgba(255, 0, 112, 1);
+}
+
+.header__theme-menu-button_active {
+    border: 1px solid rgba(255, 0, 112, 1);
+}
+
+.header__lighting {
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin-top: 20px;
+    margin-right: 29px;
+    font-family: IBM Plex Mono, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 0;
+    text-align: center;
+    color: rgba(255, 0, 112, 1);
+    display: inline-block;
+
+}
+
+.header__lighting_ellipse {
+    background-color: rgba(255, 0, 112, 1);
+    width: 9px;
+    height: 9px;
+}
