--- a/styles/style.css
+++ b/styles/style.css
@@ -1,95 +1,289 @@
+
+
+
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
+
   /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
 }
 
-.header {
-    background-image: url("/images/cover-image-dark.png");
-    background-position: center;
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    padding-top: 20px;
-    padding-right: 20px;
-    padding-bottom: 134px;
-    position: relative;
-    /*padding: 20px; !*меняется в 375*!*/
+@media (min-width: 768px) {
+    .header {
+        background-image: var(--background-image-dark);
+        background-position: center;
+        background-size: cover;
+        display: flex;
+        flex-direction: column;
+        padding: 20px 20px 134px 0;
+        position: relative;
+        /*padding: 20px; !*меняется в 375*!*/
+    }
+
+    .header__no_focus {
+        font-family: var(--font-family);
+        font-size: 157px;
+        font-weight: 700;
+        line-height: 130px;
+        letter-spacing: 0;
+        text-align: left;
+        color: rgba(219, 0, 255, 1);
+        text-shadow: 4px 4px var(--decoration-color);
+        margin-top: 273px;
+    }
+
+    .header__title {
+        margin-top: 114px;
+        background-color: var(--decoration-color);
+        align-self: flex-end;
+        max-width: 491px;
+        max-height: 71px;
+        font-family: var(--font-family);
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 1.3em;
+        letter-spacing: 0;
+        text-align: left;
+    }
+
+    .header__theme-menu {
+        display: flex;
+        justify-content: center;
+        padding-left: 20px;
+        /*padding-top: 20px;*/
+    }
+
+    .header__theme-menu-list {
+        display: flex;
+        justify-content: space-between;
+        gap: 10px;
+    }
+
+    .header__theme-menu-button {
+        background-color: transparent;
+        border: 1px solid transparent;
+        font-family: var(--font-family);
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 18px;
+        letter-spacing: 0;
+        text-align: center;
+        color: var(--decoration-color);
+        width: 70px;
+        height: 26px;
+        /*padding: 0 13px 0 13px;*/
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
+
+    .header__theme-menu-button_active {
+        border: 1px solid var(--decoration-color);
+    }
+
+    .header__lighting {
+        position: absolute;
+        right: 29px;
+        top: 20px;
+        /*margin-top: 20px;*/
+        /*margin-right: 29px;*/
+        font-family: var(--font-family);
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 25px;
+        letter-spacing: 0;
+        text-align: center;
+        color: var(--decoration-color);
+
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    .header__lighting_ellipse {
+        background-color: var(--decoration-color);
+        width: 9px;
+        height: 9px;
+        border-radius: 50%;
+        box-shadow: 0 0 4px 2px var(--decoration-color);
+
+
+    }
+
+    .header__decorations {
+        position: absolute;
+        left: 0;
+        top: 0;
+        z-index: 1;
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+    }
+
+    .header__decorations_group {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        width: 100%;
+        height: 100%;
+    }
+
+    .header__decorations_item_top {
+        width: 25px;
+        height: 25px;
+        border-right: 1px solid var(--decoration-color);
+        border-top: 1px solid var(--decoration-color);
+        align-self: end;
+    }
+
+    .header__decorations_item_bottom {
+        width: 25px;
+        height: 25px;
+        border-left: 1px solid var(--decoration-color);
+        border-bottom: 1px solid var(--decoration-color);
+        justify-self: end;
+    }
+
+    .content {
+        background: var(--background-color);
+        color: var(--article-text-color);
+        display: flex;
+        flex-direction: column;
+        gap: 80px;
+        padding-top: 60px;
+
+
+    }
+    .content__block {
+        display: grid;
+        grid-template-columns:315px 1fr;
+        padding: 0 20px 0 20px;
+        gap: 20px;
+    }
+    .content__block:last-child {
+        padding-bottom: 60px;
+    }
+
+    .content__block_horizontal {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .content__block_header {
+        font-size: 18px;
+        line-height: 1.3em;
+        font-weight: 700;
+        color: var(--decoration-color);
+        max-width: 315px;
+    }
+    .content__block_content_box {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .content__block_horizontal_content {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+    }
+
+    .content__block_article {
+        display: flex;
+        flex-direction: column;
+
+
+
+    }
+
+    .content__block_article_header {
+        font-size: 18px;
+        line-height: 1.3em;
+        font-weight: 700;
+        color: var(--background-color);
+        background-color: var(--decoration-color);
+    }
+
+    .content__block_article_text {
+        padding-top: 10px;
+    }
+    .content__special_header {
+    }
+    .content__block_article_header_no_bold {
+        font-weight: 400;
+    }
+
+
+    .content__gallery {
+        display: grid;
+        grid-template-areas:
+        "image1 image1 image2"
+        "image3 image4 image2"
+        "image3 image5 image5";
+        gap: 20px;
+
+
+    }
+    .content__gallery_image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    .image1 {
+        grid-area: image1;
+    }
+
+    .image2 {
+        grid-area: image2;
+    }
+
+    .image3 {
+        grid-area: image3;
+    }
+
+    .image4 {
+        grid-area: image4;
+    }
+
+    .image5 {
+        grid-area: image5;
+    }
 }
 
-.header__no_focus {
-    font-family: IBM Plex Mono, sans-serif;
+a {
+    text-decoration: none;
+    text-shadow: 2px 2px var(--decoration-color);
+}
+
+
+.footer {
+    display: flex;
+    position: relative;
+    align-content: center;
+    justify-content: center;
+    padding-top: 319px;
+    padding-bottom: 319px;
+    /*margin-top: 60px;*/
+    background-color: var(--background-color);
+}
+
+.footer__focus {
+    font-family: var(--font-family);
     font-size: 157px;
     font-weight: 700;
     line-height: 130px;
     letter-spacing: 0;
     text-align: left;
     color: rgba(219, 0, 255, 1);
-    text-shadow: 4px 4px  rgba(255, 0, 112, 1);
-    margin-top: 273px;
+    text-shadow: 2px 2px var(--decoration-color);
+    width: 471px;
+    height: 130px;
 }
 
-.header__title {
-    margin-top: 114px;
-    background-color: rgba(255, 0, 112, 1);
-    align-self: end;
-    width: 491px;
-    height: 71px;
-    font-family: IBM Plex Mono, sans-serif;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 23px;
-    letter-spacing: 0;
-    text-align: left;
-}
-
-.header__theme-menu {
-    display: flex;
-    justify-content: center;
-    /*padding-top: 20px;*/
-}
-
-.header__theme-menu-list {
-    display: flex;
-    justify-content: space-between;
-    gap: 10px;
-}
-
-.header__theme-menu-button {
-    background-color: rgba(0,0,0,0);
-    border: 1px solid rgba(0,0,0,0);
-    font-family: IBM Plex Mono, sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 18px;
-    letter-spacing: 0;
-    text-align: center;
-    color: rgba(255, 0, 112, 1);
-}
-
-.header__theme-menu-button_active {
-    border: 1px solid rgba(255, 0, 112, 1);
-}
-
-.header__lighting {
+.footer__decorations {
     position: absolute;
-    right: 0;
     top: 0;
-    margin-top: 20px;
-    margin-right: 29px;
-    font-family: IBM Plex Mono, sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 25px;
-    letter-spacing: 0;
-    text-align: center;
-    color: rgba(255, 0, 112, 1);
-    display: inline-block;
-
-}
-
-.header__lighting_ellipse {
-    background-color: rgba(255, 0, 112, 1);
-    width: 9px;
-    height: 9px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
 }
