--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,10 +8,10 @@
 
 body {
   min-inline-size: 375px;
-  max-inline-size: 1024px;
+  max-inline-size: 1440px;
   margin: 0 auto;
   font-family: var(--font-family);
-  line-height: 1.3em;
+  line-height: var(--line-height);
   font-size: 18px;
 }
 
