--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,43 @@
+
 /*
   Специально для тёмной темы при наличии класса,
   здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
 
+
+/* Остальные стили */
 .page.theme_dark {
   /* сохраните этот селектор в приведённом виде.
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+
+    --decoration-color: rgba(255, 0, 112, 1);
+    --background-image: url("../images/cover-image-dark.png");
+    --border-button-color: rgba(255, 0, 112, 0.4);
+    --font-button-color: rgba(255, 0, 112, 1);
+    --header-text-color: rgba(219, 0, 255, 1);
+    --header-shadow-color: rgba(255, 0, 112, 1);
+    --font-text-color: rgba(0, 0, 40, 1);
+    --font-article-header-color: rgba(255, 0, 112, 1);
+    --article-text-color: rgba(241, 178, 206, 1);
+    --light-disp: flex;
 }
+/*@media (prefers-color-scheme: dark) {*/
+/*    :root {*/
+/*        --decoration-color: rgba(255, 0, 112, 1);*/
+/*        --background-image: url("../images/cover-image-dark.png");*/
+/*        --border-button-color: rgba(255, 0, 112, 0.4);*/
+/*        --font-button-color: rgba(255, 0, 112, 1);*/
+/*        --header-text-color: rgba(219, 0, 255, 1);*/
+/*        --header-shadow-color: rgba(255, 0, 112, 1);*/
+/*        --font-text-color: rgba(0, 0, 40, 1);*/
+/*        --font-article-header-color: rgba(255, 0, 112, 1);*/
+/*        --article-text-color: rgba(241, 178, 206, 1);*/
+/*        --light-disp: flex;*/
+/*    }*/
+/*}*/
+
+
+
