--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,51 @@
+
+
 /*
   Специально для светлой темы при наличии класса.
   Здесь окажутся стили, которые нужно переопределить принудительно,
   переключая тему
 */
 
+
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+
+    /* сохраните этот селектор в приведённом виде.
+      Так стили написанные ниже будут иметь больший вес,
+      чем стили в медиазапросе предпочтений пользователя
+    */
+
+    --decoration-color: rgba(255, 141, 203, 1);
+    --background-image: url("../images/cover-image-light.png");
+    --border-button-color: rgba(50, 49, 45, 0.4);
+    --font-button-color: rgba(53, 52, 48, 1);
+    --header-text-color: rgba(255, 194, 230, 1);
+    --header-shadow-color: rgba(255, 0, 112, 1);
+    --font-text-color: rgba(53, 52, 48, 1);
+    --font-article-header-color: rgba(53, 52, 48, 1);
+    --article-text-color: rgba(53, 52, 48, 1);
+    --light-disp: none;
+
+
+
+
 }
+@media (prefers-color-scheme: light) {
+    :root {
+        --decoration-color: rgba(255, 141, 203, 1);
+        --background-image: url("../images/cover-image-light.png");
+        --border-button-color: rgba(50, 49, 45, 0.4);
+        --font-button-color: rgba(53, 52, 48, 1);
+        --header-text-color: rgba(255, 194, 230, 1);
+        --header-shadow-color: rgba(255, 0, 112, 1);
+        --font-text-color: rgba(53, 52, 48, 1);
+        --font-article-header-color: rgba(53, 52, 48, 1);
+        --article-text-color: rgba(53, 52, 48, 1);
+        --light-disp: none;
+    }
+}
+/* Остальные стили */
+
+
+
+
+
