--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,10 @@
-/* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
-
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
     background-image: var(--background-image);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
 }
+
 .header {
     display: flex;
     flex-direction: column;
@@ -14,6 +12,7 @@
     position: relative;
     height: 100vh;
 }
+
 .header__no_focus {
     font-family: var(--font-family);
     font-size: var(--header-size-desktop);
@@ -23,11 +22,11 @@
     text-align: left;
     margin-top: 273px;
 }
+
 .header__title {
     margin-top: 114px;
     align-self: flex-end;
     max-width: 491px;
-    /*max-height: 71px;*/
     font-family: var(--font-family);
     font-size: 18px;
     font-weight: 700;
@@ -35,20 +34,24 @@
     letter-spacing: 0;
     text-align: left;
 }
+
 .title-decorations {
     background-color: var(--decoration-color);
 }
+
 .header__theme-menu {
     display: flex;
     justify-content: center;
     padding-left: var(--padding);
     z-index: 2;
 }
+
 .header__theme-menu-list {
     display: flex;
     justify-content: space-between;
     gap: 10px;
 }
+
 .header__theme-menu-button {
     background-color: transparent;
     border: 1px solid transparent;
@@ -65,28 +68,36 @@
     align-content: center;
     overflow: hidden;
 }
+
 .header__theme-menu-button:focus {
     border: none;
     outline: none;
 }
+
 .header__theme-menu-button_active {
     pointer-events: none;
 }
+
 .header__theme-menu-button {
     color: var(--font-button-color);
 }
+
 .header__theme-menu-button:hover {
     border: 1px solid var(--border-button-color);
 }
+
 .header__theme-menu-button:focus {
     border-bottom: 1px solid var(--border-button-color);
 }
+
 .header__theme-menu-button_active {
     border: 1px solid var(--decoration-color);
 }
+
 .header__title {
     color: var(--font-text-color);
 }
+
 .header__lighting {
     position: absolute;
     right: 29px;
@@ -102,6 +113,7 @@
     align-items: center;
     gap: 5px;
 }
+
 .header__lighting:after {
     content: "";
     background-color: var(--decoration-color);
@@ -110,6 +122,7 @@
     border-radius: 50%;
     box-shadow: 0 0 4px 2px var(--decoration-color);
 }
+
 .content {
     color: var(--article-text-color);
     display: flex;
@@ -117,55 +130,68 @@
     gap: 80px;
     padding-top: 60px;
 }
+
 .content__block {
     display: grid;
     grid-template-columns:315px 1fr;
     padding: 0 var(--padding) 0 var(--padding);
     gap: var(--padding);
 }
+
 .content__block:last-child {
     padding-bottom: 60px;
 }
+
 .content__block_horizontal {
     display: flex;
     flex-direction: column;
 }
+
 .content__block_header {
     font-size: 18px;
     line-height: var(--line-height);
     font-weight: 700;
     max-width: 315px;
 }
+
 .content__block_header {
     color: var(--font-article-header-color);
 }
+
 .content__block_article_header {
     color: var(--font-text-color);
 }
+
 .content__block_content_box {
     display: flex;
     flex-direction: column;
     gap: var(--padding);
 }
+
 .content__block_horizontal_content {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
 }
+
 .content__block_article {
     display: flex;
     flex-direction: column;
 }
+
 .content__block_article_header {
     font-size: 18px;
     line-height: var(--line-height);
     font-weight: 700;
 }
+
 .content__block_article_text {
     padding-top: 10px;
 }
+
 .content__block_article_header_no_bold {
     font-weight: 400;
 }
+
 .content__gallery {
     display: grid;
     grid-template-areas:
@@ -174,46 +200,56 @@
     "image3 image5 image5";
     gap: var(--padding);
 }
+
 .content__gallery_image {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
 }
+
 .image1 {
     grid-area: image1;
 }
+
 .image2 {
     grid-area: image2;
 }
+
 .image3 {
     grid-area: image3;
 }
+
 .image4 {
     grid-area: image4;
 }
+
 .image5 {
     grid-area: image5;
 }
+
 a {
     text-decoration: none;
     text-shadow: 2px 2px var(--decoration-color);
 }
+
 a:hover {
     border-bottom: 1px solid var(--article-text-color);
 }
+
 a:focus {
     text-decoration: none;
     outline: 1px solid var(--article-text-color);
 }
+
 .footer {
     display: flex;
     flex-direction: column;
-    /*padding: 319px 277px;*/
     position: relative;
     height: 100vh;
     justify-content: center;
 }
+
 .header:before, .header:after, .footer::before, .footer::after {
     border: 1px solid var(--font-article-header-color);
     position: absolute;
@@ -221,69 +257,79 @@ a:focus {
     width: 25px;
     height: 25px;
 }
+
 .header:before, .footer:before {
     border-left: none;
     border-bottom: none;
     top: var(--padding);
     right: var(--padding);
 }
+
 .header:after, .footer:after {
-    /*margin-left: var(--padding);*/
     border-right: none;
     border-top: none;
     bottom: var(--padding);
     left: var(--padding);
 }
+
 .footer__focus {
     text-shadow: 2px 2px var(--decoration-color);
 }
-.header:before, .header:after, .footer::before, .footer::after {
 
-}
 .header__no_focus, .footer__focus {
     color: var(--header-text-color);
     font-size: var(--header-size-desktop);
     text-shadow: 4px 4px var(--header-shadow-color);
 }
+
 .footer__focus {
     text-align: center;
 }
 
-@media (max-width: 768px) and (min-width: 376px){
+@media (max-width: 768px) and (min-width: 376px) {
     .header {
         padding-bottom: 183px;
     }
+
     .header__no_focus {
         font-size: 120px;
         line-height: 99px;
         margin-top: 173px;
     }
+
     .header__title {
         margin-top: 162px;
         max-width: 364px;
         max-height: 117px;
     }
+
     .header__theme-menu {
         justify-content: flex-end;
         margin-top: 172px;
     }
+
     .header__theme-menu-list {
         flex-direction: column;
     }
+
     .content__block {
         grid-template-columns: 236px 1fr;
     }
+
     .content__block_header {
         max-width: 236px;
     }
+
     .content__block_horizontal_content {
         display: flex;
         flex-direction: column;
         gap: var(--padding);
     }
+
     .footer {
         padding: 447px 204px;
     }
+
     .footer__focus {
         font-size: 120px;
     }
@@ -299,50 +345,62 @@ a:focus {
         line-height: 0.825em;
         margin-top: 65px;
     }
+
     .header__title {
         margin-top: 55px;
     }
+
     .header__theme-menu {
         justify-content: flex-end;
         margin-top: 65px;
     }
+
     .header__theme-menu-list {
         flex-direction: column;
     }
+
     .header__decorations {
         padding: 10px;
     }
+
     .header__lighting {
         right: 19px;
         top: 10px;
         gap: 5px;
     }
+
     .content {
         padding-top: 30px;
         gap: 50px;
     }
+
     .content__block {
         display: flex;
         flex-direction: column;
         padding: 0 10px 0 10px;
     }
+
     .content__block:last-child {
         gap: 10px;
         padding-bottom: 40px;
     }
+
     .content__block_header {
         max-width: max-content;
     }
+
     .content__block_horizontal_content {
         display: flex;
         flex-direction: column;
         gap: var(--padding);
     }
+
     .content__gallery {
         display: flex;
         flex-direction: column;
         gap: 10px;
     }
+
     .footer {
         padding: 286px 4px;
     }
@@ -350,14 +408,17 @@ a:focus {
     .header:after, .footer:after {
         left: 10px;
     }
+
     .header:before, .footer:before {
         top: 10px;
         right: 10px;
     }
+
     .footer__focus {
         font-size: 116px;
         line-height: 0.825em;
     }
+
     .footer__decorations {
         padding: 10px;
     }
