--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,6 +1,7 @@
 .page.theme_dark {
     --decoration-color: rgba(255, 0, 112, 1);
     --background-image: url("../images/cover-image-dark.png");
+    --background-color: rgba(0, 0, 40, 1);
     --border-button-color: rgba(255, 0, 112, 0.4);
     --font-button-color: rgba(255, 0, 112, 1);
     --header-text-color: rgba(219, 0, 255, 1);
