--- a/styles/light.css
+++ b/styles/light.css
@@ -1,6 +1,7 @@
 .page.theme_light {
     --decoration-color: rgba(255, 141, 203, 1);
     --background-image: url("../images/cover-image-light.png");
+    --background-color: none;
     --border-button-color: rgba(50, 49, 45, 0.4);
     --font-button-color: rgba(53, 52, 48, 1);
     --header-text-color: rgba(255, 194, 230, 1);
@@ -15,6 +16,7 @@
     :root {
         --decoration-color: rgba(255, 141, 203, 1);
         --background-image: url("../images/cover-image-light.png");
+        --background-color: none;
         --border-button-color: rgba(50, 49, 45, 0.4);
         --font-button-color: rgba(53, 52, 48, 1);
         --header-text-color: rgba(255, 194, 230, 1);
