--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,7 +11,7 @@ body {
     max-inline-size: 1440px;
     margin: 0 auto;
     font-family: var(--font-family);
-    line-height: var(--line-height);
+    line-height: var(--text-line-height);
     font-size: 18px;
 }
 
