--- a/styles/style.css
+++ b/styles/style.css
@@ -84,7 +84,7 @@
 }
 
 .header__theme-menu-button:hover {
-    border: 1px solid var(--border-focus-button-color);
+    border: 1px solid var(--border-hover-button-color);
     cursor: pointer;
 }
 
@@ -96,11 +96,11 @@
 .header__lighting {
     position: absolute;
     right: 29px;
-    top: var(--padding);
+    top: 20px;
     font-family: var(--font-family);
     font-size: 18px;
     font-weight: 400;
-    line-height: 3.26vh;
+    line-height: 25px;
     letter-spacing: 0;
     text-align: center;
     color: var(--decoration-color);
@@ -292,7 +292,7 @@
     }
 
     .header__lighting {
-        line-height: 2.44vh;
+        line-height: 25px;
     }
 
     .content {
@@ -348,7 +348,7 @@
     .header__lighting {
         right: 19px;
         top: 10px;
-        line-height: 3.74vh;
+        line-height: 25px;
     }
 
     .content {
